5.4. Create ConsoleUtils class