@@ -1,7 +1,5 @@
 package core;
 
-// СДЕЛАТЬ: использование класса ValidationUtils
-
 import model.*;
 import assignment.*;
 import filters.*;
@@ -30,14 +28,15 @@ public class CommandRegistry {
                     system.getAssignmentManager()
             );
 
-            // Показываем отчёт
             System.out.println(report);
 
-            // Предлагаем сохранить
-            ReportGenerator.exportToFile(
-                    report,
-                    "user_report.txt"
-            );
+            if (ConsoleUtils.promptYesNo(scanner, "Save report to file?")) {
+                String filename = ConsoleUtils.promptString(scanner, "Enter filename [user_report.txt]: ", false);
+                if (filename.isEmpty()) {
+                    filename = "user_report.txt";
+                }
+                ReportGenerator.exportToFile(report, filename);
+            }
         });
 
         parser.registerCommand("report-roles", "Generate role report", (scanner, system) -> {
@@ -50,10 +49,13 @@ public class CommandRegistry {
 
             System.out.println(report);
 
-            ReportGenerator.exportToFile(
-                    report,
-                    "role_report.txt"
-            );
+            if (ConsoleUtils.promptYesNo(scanner, "Save report to file?")) {
+                String filename = ConsoleUtils.promptString(scanner, "Enter filename [role_report.txt]: ", false);
+                if (filename.isEmpty()) {
+                    filename = "role_report.txt";
+                }
+                ReportGenerator.exportToFile(report, filename);
+            }
         });
 
         parser.registerCommand("report-matrix", "Generate permission matrix", (scanner, system) -> {
@@ -66,10 +68,13 @@ public class CommandRegistry {
 
             System.out.println(report);
 
-            ReportGenerator.exportToFile(
-                    report,
-                    "permission_matrix.txt"
-            );
+            if (ConsoleUtils.promptYesNo(scanner, "Save matrix to file?")) {
+                String filename = ConsoleUtils.promptString(scanner, "Enter filename [permission_matrix.txt]: ", false);
+                if (filename.isEmpty()) {
+                    filename = "permission_matrix.txt";
+                }
+                ReportGenerator.exportToFile(report, filename);
+            }
         });
     }
 
@@ -78,8 +83,9 @@ public class CommandRegistry {
         parser.registerCommand("user-list", "List all users with optional filters", (scanner, system) -> {
             UserManager um = system.getUserManager();
             List<User> users;
-            System.out.print("Apply filters? (yes/no): ");
-            if (scanner.nextLine().trim().equalsIgnoreCase("yes")) {
+
+            // Заменяем прямой ввод на ConsoleUtils
+            if (ConsoleUtils.promptYesNo(scanner, "Apply filters?")) {
                 users = searchUsersLogic(scanner, um);
             } else {
                 users = um.findAll();
@@ -89,17 +95,14 @@ public class CommandRegistry {
 
         parser.registerCommand("user-create", "Create a new user", (scanner, system) -> {
             try {
-                System.out.print("Enter username: ");
-                String username = scanner.nextLine().trim();
-                System.out.print("Enter full name: ");
-                String fullName = scanner.nextLine().trim();
-                System.out.print("Enter email: ");
-                String email = scanner.nextLine().trim();
+                // Заменяем прямые вызовы scanner на ConsoleUtils с валидацией
+                String username = ConsoleUtils.promptString(scanner, "Enter username: ", true);
+                String fullName = ConsoleUtils.promptString(scanner, "Enter full name: ", true);
+                String email = ConsoleUtils.promptString(scanner, "Enter email: ", true);
 
                 User newUser = User.validate(username, fullName, email);
                 system.getUserManager().add(newUser);
 
-                // Логирование
                 system.getAuditLog().log(
                         "USER_CREATE",
                         system.getCurrentUser(),
@@ -107,15 +110,15 @@ public class CommandRegistry {
                         String.format("Full name: %s, Email: %s", fullName, email)
                 );
 
-                System.out.println("User created successfully!");
+                ConsoleUtils.printSuccess("User created successfully!");
             } catch (Exception e) {
-                System.out.println("Error: " + e.getMessage());
+                ConsoleUtils.printError(e.getMessage());
             }
         });
 
         parser.registerCommand("user-view", "View detailed user info", (scanner, system) -> {
-            System.out.print("Enter username: ");
-            String username = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String username = ConsoleUtils.promptString(scanner, "Enter username: ", true);
 
             system.getUserManager().findByUsername(username).ifPresentOrElse(user -> {
                 System.out.println(user.format());
@@ -151,35 +154,35 @@ public class CommandRegistry {
                 }
                 System.out.println("=".repeat(60));
 
-            }, () -> System.out.println("Error: User '" + username + "' not found."));
+            }, () -> ConsoleUtils.printError("User '" + username + "' not found."));
         });
 
         parser.registerCommand("user-update", "Update user data", (scanner, system) -> {
-            System.out.print("Enter username to update: ");
-            String username = scanner.nextLine().trim();
+            // Заменяем прямые вызовы scanner на ConsoleUtils
+            String username = ConsoleUtils.promptString(scanner, "Enter username to update: ", true);
+
             try {
-                System.out.print("Enter new full name: ");
-                String name = scanner.nextLine().trim();
-                System.out.print("Enter new email: ");
-                String email = scanner.nextLine().trim();
+                String name = ConsoleUtils.promptString(scanner, "Enter new full name: ", true);
+                String email = ConsoleUtils.promptString(scanner, "Enter new email: ", true);
+
                 system.getUserManager().update(username, name, email);
-                System.out.println("User updated successfully.");
+                ConsoleUtils.printSuccess("User updated successfully.");
             } catch (Exception e) {
-                System.out.println("Update failed: " + e.getMessage());
+                ConsoleUtils.printError("Update failed: " + e.getMessage());
             }
         });
 
         parser.registerCommand("user-delete", "Delete a user and their assignments", (scanner, system) -> {
-            System.out.print("Enter username to delete: ");
-            String username = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String username = ConsoleUtils.promptString(scanner, "Enter username to delete: ", true);
+
             system.getUserManager().findByUsername(username).ifPresentOrElse(user -> {
-                System.out.print("Confirm deletion (type 'yes'): ");
-                if (scanner.nextLine().trim().equalsIgnoreCase("yes")) {
+                // Заменяем прямой ввод на ConsoleUtils
+                if (ConsoleUtils.promptYesNo(scanner, "Confirm deletion")) {
                     var userAssignments = system.getAssignmentManager().findByFilter(AssignmentFilters.byUsername(username));
                     userAssignments.forEach(a -> system.getAssignmentManager().remove(a));
                     system.getUserManager().remove(user);
 
-                    // Логирование
                     system.getAuditLog().log(
                             "USER_DELETE",
                             system.getCurrentUser(),
@@ -187,9 +190,9 @@ public class CommandRegistry {
                             "User and all assignments deleted"
                     );
 
-                    System.out.println("User and all their assignments deleted.");
+                    ConsoleUtils.printSuccess("User and all their assignments deleted.");
                 }
-            }, () -> System.out.println("User not found."));
+            }, () -> ConsoleUtils.printError("User not found."));
         });
 
         parser.registerCommand("user-search", "Search users by filters", (scanner, system) -> {
@@ -207,58 +210,64 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("role-create", "Create a new role", (scanner, system) -> {
-            System.out.print("Role name: ");
-            String name = scanner.nextLine().trim();
-            System.out.print("Description: ");
-            String desc = scanner.nextLine().trim();
-            Role role = new Role(name, desc);
-            system.getRoleManager().add(role);
+            // Заменяем прямые вызовы scanner на ConsoleUtils
+            String name = ConsoleUtils.promptString(scanner, "Role name: ", true);
+            String desc = ConsoleUtils.promptString(scanner, "Description: ", true);
 
-            // Логирование
-            system.getAuditLog().log(
-                    "ROLE_CREATE",
-                    system.getCurrentUser(),
-                    name,
-                    "Description: " + desc
-            );
+            try {
+                Role role = new Role(name, desc);
+                system.getRoleManager().add(role);
 
-            System.out.println("Role created. Now add permissions.");
-            addPermissionsLoop(scanner, role);
+                system.getAuditLog().log(
+                        "ROLE_CREATE",
+                        system.getCurrentUser(),
+                        name,
+                        "Description: " + desc
+                );
+
+                ConsoleUtils.printSuccess("Role created. Now add permissions.");
+                addPermissionsLoop(scanner, role);
+            } catch (Exception e) {
+                ConsoleUtils.printError(e.getMessage());
+            }
         });
 
         parser.registerCommand("role-view", "View role details", (scanner, system) -> {
-            System.out.print("Enter role name: ");
-            String name = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String name = ConsoleUtils.promptString(scanner, "Enter role name: ", true);
+
             system.getRoleManager().findByName(name).ifPresentOrElse(
                     r -> System.out.println(r.format()),
-                    () -> System.out.println("Role not found."));
+                    () -> ConsoleUtils.printError("Role not found."));
         });
 
         parser.registerCommand("role-update", "Update role description", (scanner, system) -> {
-            System.out.print("Enter role name to update: ");
-            String name = scanner.nextLine().trim();
+            // Заменяем прямые вызовы scanner на ConsoleUtils
+            String name = ConsoleUtils.promptString(scanner, "Enter role name to update: ", true);
+
             system.getRoleManager().findByName(name).ifPresentOrElse(role -> {
-                System.out.print("Enter new description: ");
-                role.setDescription(scanner.nextLine().trim());
-                System.out.println("Role updated successfully.");
-            }, () -> System.out.println("Role not found."));
+                String desc = ConsoleUtils.promptString(scanner, "Enter new description: ", true);
+                role.setDescription(desc);
+                ConsoleUtils.printSuccess("Role updated successfully.");
+            }, () -> ConsoleUtils.printError("Role not found."));
         });
 
         parser.registerCommand("role-delete", "Delete a role", (scanner, system) -> {
-            System.out.print("Role name: ");
-            String name = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String name = ConsoleUtils.promptString(scanner, "Role name: ", true);
+
             system.getRoleManager().findByName(name).ifPresentOrElse(role -> {
                 if (system.getAssignmentManager().isRoleAssigned(role)) {
                     System.out.println("WARNING: Role is assigned to users:");
                     system.getAssignmentManager().findByFilter(AssignmentFilters.byRole(role))
                             .forEach(a -> System.out.println(" - " + a.user().username()));
                 }
-                System.out.print("Confirm deletion (type 'yes'): ");
-                if (scanner.nextLine().trim().equalsIgnoreCase("yes")) {
+
+                // Заменяем прямой ввод на ConsoleUtils
+                if (ConsoleUtils.promptYesNo(scanner, "Confirm deletion")) {
                     try {
                         system.getRoleManager().remove(role);
 
-                        // Логирование
                         system.getAuditLog().log(
                                 "ROLE_DELETE",
                                 system.getCurrentUser(),
@@ -266,60 +275,77 @@ public class CommandRegistry {
                                 "Role deleted from system"
                         );
 
-                        System.out.println("Role deleted.");
-                    } catch (Exception e) { System.out.println("Error: " + e.getMessage()); }
+                        ConsoleUtils.printSuccess("Role deleted.");
+                    } catch (Exception e) {
+                        ConsoleUtils.printError(e.getMessage());
+                    }
                 }
-            }, () -> System.out.println("Role not found."));
+            }, () -> ConsoleUtils.printError("Role not found."));
         });
 
         parser.registerCommand("role-add-permission", "Add permission to role", (scanner, system) -> {
-            System.out.print("Role name: ");
-            String rName = scanner.nextLine().trim();
+            // Заменяем прямые вызовы scanner на ConsoleUtils
+            String rName = ConsoleUtils.promptString(scanner, "Role name: ", true);
+
             try {
-                System.out.print("Permission name: ");
-                String pName = scanner.nextLine().trim();
-                System.out.print("Resource: ");
-                String res = scanner.nextLine().trim();
-                System.out.print("Description: ");
-                String desc = scanner.nextLine().trim();
+                String pName = ConsoleUtils.promptString(scanner, "Permission name: ", true);
+                String res = ConsoleUtils.promptString(scanner, "Resource: ", true);
+                String desc = ConsoleUtils.promptString(scanner, "Description: ", true);
+
                 system.getRoleManager().addPermissionToRole(rName, new Permission(pName, res, desc));
-                System.out.println("Permission added.");
-            } catch (Exception e) { System.out.println(e.getMessage()); }
+                ConsoleUtils.printSuccess("Permission added.");
+            } catch (Exception e) {
+                ConsoleUtils.printError(e.getMessage());
+            }
         });
 
         parser.registerCommand("role-remove-permission", "Remove permission from role", (scanner, system) -> {
-            System.out.print("Role name: ");
-            String rName = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String rName = ConsoleUtils.promptString(scanner, "Role name: ", true);
+
             system.getRoleManager().findByName(rName).ifPresentOrElse(role -> {
                 List<Permission> perms = new ArrayList<>(role.getPermissions());
-                for (int i = 0; i < perms.size(); i++) {
-                    System.out.println((i + 1) + ". " + perms.get(i).format());
+
+                // Заменяем ручной вывод на promptChoice
+                if (perms.isEmpty()) {
+                    ConsoleUtils.printWarning("Role has no permissions to remove.");
+                    return;
                 }
-                System.out.print("Select permission number to remove: ");
+
+                Permission selected = ConsoleUtils.promptChoice(
+                        scanner,
+                        "Select permission to remove:",
+                        perms
+                );
+
                 try {
-                    int idx = Integer.parseInt(scanner.nextLine().trim()) - 1;
-                    system.getRoleManager().removePermissionFromRole(rName, perms.get(idx));
-                    System.out.println("Permission removed.");
-                } catch (Exception e) { System.out.println("Error: " + e.getMessage()); }
-            }, () -> System.out.println("Role not found."));
+                    system.getRoleManager().removePermissionFromRole(rName, selected);
+                    ConsoleUtils.printSuccess("Permission removed.");
+                } catch (Exception e) {
+                    ConsoleUtils.printError(e.getMessage());
+                }
+
+            }, () -> ConsoleUtils.printError("Role not found."));
         });
 
         parser.registerCommand("role-search", "Search roles", (scanner, system) -> {
-            System.out.println("1. By name (contains)\n2. By permission name\n3. By min permissions count");
-            System.out.print("Select filter number: ");
-            String choice = scanner.nextLine().trim();
+            // Заменяем ручной выбор на promptChoice
+            List<String> searchOptions = Arrays.asList(
+                    "By name (contains)",
+                    "By permission name",
+                    "By min permissions count"
+            );
 
-            List<Role> found = switch (choice) {
-                case "1" -> {
-                    System.out.print("Enter role name: ");
-                    String rName = scanner.nextLine().trim();
+            String choice = ConsoleUtils.promptChoice(scanner, "Select filter:", searchOptions);
+
+            List<Role> found = switch (searchOptions.indexOf(choice)) {
+                case 0 -> {
+                    String rName = ConsoleUtils.promptString(scanner, "Enter role name: ", true);
                     yield system.getRoleManager().findByFilter(RoleFilters.byNameContains(rName));
                 }
-                case "2" -> {
-                    System.out.print("Enter permission name: ");
-                    String pName = scanner.nextLine().trim();
-                    System.out.print("Enter resource (optional): ");
-                    String pRes = scanner.nextLine().trim();
+                case 1 -> {
+                    String pName = ConsoleUtils.promptString(scanner, "Enter permission name: ", true);
+                    String pRes = ConsoleUtils.promptString(scanner, "Enter resource (optional): ", false);
                     yield system.getRoleManager().findByFilter(role ->
                             role.getPermissions().stream().anyMatch(p ->
                                     p.name().equalsIgnoreCase(pName) &&
@@ -327,23 +353,15 @@ public class CommandRegistry {
                             )
                     );
                 }
-                case "3" -> {
-                    System.out.print("Enter minimum count: ");
-                    try {
-                        int min = Integer.parseInt(scanner.nextLine().trim());
-                        yield system.getRoleManager().findByFilter(RoleFilters.hasAtLeastNPermissions(min));
-                    } catch (NumberFormatException e) {
-                        yield new ArrayList<>();
-                    }
+                case 2 -> {
+                    int min = ConsoleUtils.promptInt(scanner, "Enter minimum count: ", 0, 100);
+                    yield system.getRoleManager().findByFilter(RoleFilters.hasAtLeastNPermissions(min));
                 }
-                default -> {
-                    System.out.println("Unknown filter. Showing all.");
-                    yield system.getRoleManager().findAll();
-                }
+                default -> system.getRoleManager().findAll();
             };
 
             if (found.isEmpty()) {
-                System.out.println("No roles found.");
+                ConsoleUtils.printWarning("No roles found.");
             } else {
                 found.forEach(r -> System.out.println(" - " + r.getName() + " (" + r.getPermissions().size() + " perms)"));
             }
@@ -354,26 +372,31 @@ public class CommandRegistry {
     private static void registerAssignmentCommands(CommandParser parser) {
         parser.registerCommand("assign-role", "Assign role to user", (scanner, system) -> {
             try {
-                System.out.print("Username: ");
-                String username = scanner.nextLine().trim();
-                User user = system.getUserManager().findByUsername(username).orElseThrow(() -> new Exception("User not found"));
+                // Заменяем прямые вызовы scanner на ConsoleUtils
+                String username = ConsoleUtils.promptString(scanner, "Username: ", true);
+                User user = system.getUserManager().findByUsername(username)
+                        .orElseThrow(() -> new Exception("User not found"));
 
-                System.out.println("Available roles:");
-                system.getRoleManager().findAll().forEach(r -> System.out.println(" - " + r.getName()));
-                System.out.print("Select role: ");
-                String roleName = scanner.nextLine().trim();
-                Role role = system.getRoleManager().findByName(roleName).orElseThrow(() -> new Exception("Role not found"));
+                List<Role> availableRoles = system.getRoleManager().findAll();
+                if (availableRoles.isEmpty()) {
+                    ConsoleUtils.printWarning("No roles available to assign.");
+                    return;
+                }
 
-                System.out.print("Type (permanent/temporary): ");
-                String type = scanner.nextLine().trim().toLowerCase();
-                System.out.print("Reason: ");
-                String reason = scanner.nextLine().trim();
+                // Заменяем ручной выбор на promptChoice
+                Role role = ConsoleUtils.promptChoice(
+                        scanner,
+                        "Available roles:",
+                        availableRoles
+                );
+
+                String type = ConsoleUtils.promptString(scanner, "Type (permanent/temporary): ", true);
+                String reason = ConsoleUtils.promptString(scanner, "Reason: ", true);
                 AssignmentMetadata meta = AssignmentMetadata.now(system.getCurrentUser(), reason);
 
                 String details;
-                if (type.equals("temporary")) {
-                    System.out.print("Expiration (yyyy-MM-dd HH:mm): ");
-                    String date = scanner.nextLine().trim();
+                if (type.equalsIgnoreCase("temporary")) {
+                    String date = ConsoleUtils.promptString(scanner, "Expiration (yyyy-MM-dd HH:mm): ", true);
                     system.getAssignmentManager().add(new TemporaryAssignment(user, role, meta, date, false));
                     details = String.format("Type: TEMPORARY, Expires: %s, Reason: %s", date, reason);
                 } else {
@@ -381,48 +404,58 @@ public class CommandRegistry {
                     details = String.format("Type: PERMANENT, Reason: %s", reason);
                 }
 
-                // Логирование
                 system.getAuditLog().log(
                         "ASSIGNMENT_CREATE",
                         system.getCurrentUser(),
-                        String.format("%s -> %s", username, roleName),
+                        String.format("%s -> %s", username, role.getName()),
                         details
                 );
 
-                System.out.println("Role assigned.");
-            } catch (Exception e) { System.out.println("Assignment failed: " + e.getMessage()); }
+                ConsoleUtils.printSuccess("Role assigned.");
+            } catch (Exception e) {
+                ConsoleUtils.printError("Assignment failed: " + e.getMessage());
+            }
         });
 
         parser.registerCommand("revoke-role", "Revoke role from user", (scanner, system) -> {
-            System.out.print("Username: ");
-            String username = scanner.nextLine().trim();
-            var assignments = system.getAssignmentManager().findByFilter(AssignmentFilters.byUsername(username))
-                    .stream().filter(RoleAssignment::isActive).toList();
+            // Заменяем прямой ввод на ConsoleUtils
+            String username = ConsoleUtils.promptString(scanner, "Username: ", true);
+
+            var assignments = system.getAssignmentManager()
+                    .findByFilter(AssignmentFilters.byUsername(username))
+                    .stream()
+                    .filter(RoleAssignment::isActive)
+                    .collect(Collectors.toList());
 
             if (assignments.isEmpty()) {
-                System.out.println("No active assignments found.");
+                ConsoleUtils.printWarning("No active assignments found.");
                 return;
             }
 
-            for (int i = 0; i < assignments.size(); i++) {
-                System.out.printf("%d. Role: %s (%s)%n", i + 1, assignments.get(i).role().getName(), assignments.get(i).assignmentType());
+            // Заменяем ручной выбор на promptChoice
+            RoleAssignment selected = ConsoleUtils.promptChoice(
+                    scanner,
+                    "Select assignment to revoke:",
+                    assignments
+            );
+
+            // Заменяем прямой ввод на ConsoleUtils
+            if (ConsoleUtils.promptYesNo(scanner, "Confirm revocation")) {
+                try {
+                    system.getAssignmentManager().revokeAssignment(selected.assignmentId());
+
+                    system.getAuditLog().log(
+                            "ASSIGNMENT_REVOKE",
+                            system.getCurrentUser(),
+                            String.format("%s -> %s", username, selected.role().getName()),
+                            String.format("Type: %s", selected.assignmentType())
+                    );
+
+                    ConsoleUtils.printSuccess("Role revoked.");
+                } catch (Exception e) {
+                    ConsoleUtils.printError("Revoke failed: " + e.getMessage());
+                }
             }
-            System.out.print("Select assignment number to revoke: ");
-            try {
-                int idx = Integer.parseInt(scanner.nextLine().trim()) - 1;
-                RoleAssignment assignment = assignments.get(idx);
-                system.getAssignmentManager().revokeAssignment(assignments.get(idx).assignmentId());
-
-                // Логирование
-                system.getAuditLog().log(
-                        "ASSIGNMENT_REVOKE",
-                        system.getCurrentUser(),
-                        String.format("%s -> %s", username, assignment.role().getName()),
-                        String.format("Type: %s", assignment.assignmentType())
-                );
-
-                System.out.println("Role revoked.");
-            } catch (Exception e) { System.out.println("Revoke failed: " + e.getMessage()); }
         });
 
         parser.registerCommand("assignment-list", "List all assignments", (scanner, system) -> {
@@ -430,17 +463,18 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("assignment-list-user", "Assignments of user", (scanner, system) -> {
-            System.out.print("Username: ");
-            String name = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String name = ConsoleUtils.promptString(scanner, "Username: ", true);
             printAssignmentTable(system.getAssignmentManager().findByFilter(AssignmentFilters.byUsername(name)));
         });
 
         parser.registerCommand("assignment-list-role", "Users with specific role", (scanner, system) -> {
-            System.out.print("Enter role name: ");
-            String rName = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String rName = ConsoleUtils.promptString(scanner, "Enter role name: ", true);
+
             system.getRoleManager().findByName(rName).ifPresentOrElse(role -> {
                 printAssignmentTable(system.getAssignmentManager().findByFilter(AssignmentFilters.byRole(role)));
-            }, () -> System.out.println("Role not found."));
+            }, () -> ConsoleUtils.printError("Role not found."));
         });
 
         parser.registerCommand("assignment-active", "Show active assignments", (scanner, system) -> {
@@ -476,11 +510,9 @@ public class CommandRegistry {
         });
 
         parser.registerCommand("assignment-extend", "Extend temporary assignment", (scanner, system) -> {
-            System.out.print("Enter username: ");
-            String username = scanner.nextLine().trim();
-
-            System.out.print("Enter role name: ");
-            String roleName = scanner.nextLine().trim();
+            // Заменяем прямые вызовы scanner на ConsoleUtils
+            String username = ConsoleUtils.promptString(scanner, "Enter username: ", true);
+            String roleName = ConsoleUtils.promptString(scanner, "Enter role name: ", true);
 
             var userOpt = system.getUserManager().findByUsername(username);
             var roleOpt = system.getRoleManager().findByName(roleName);
@@ -493,61 +525,64 @@ public class CommandRegistry {
                         .findFirst();
 
                 if (assignment.isPresent()) {
-                    System.out.print("Enter new expiration date (yyyy-MM-dd HH:mm): ");
-                    String newDateStr = scanner.nextLine().trim();
+                    String newDateStr = ConsoleUtils.promptString(scanner, "Enter new expiration date (yyyy-MM-dd HH:mm): ", true);
 
                     try {
                         system.getAssignmentManager().extendTemporaryAssignment(assignment.get().assignmentId(), newDateStr);
 
-                        System.out.println("Success: Assignment extended. Status is now: " +
+                        ConsoleUtils.printSuccess("Assignment extended. Status is now: " +
                                 (assignment.get().isActive() ? "ACTIVE" : "STILL EXPIRED (check date)"));
                     } catch (Exception e) {
-                        System.out.println("Error: " + e.getMessage());
+                        ConsoleUtils.printError(e.getMessage());
                     }
                 } else {
-                    System.out.println("Error: No temporary assignment found for this user/role pair.");
+                    ConsoleUtils.printError("No temporary assignment found for this user/role pair.");
                 }
             } else {
-                System.out.println("Error: User or Role not found.");
+                ConsoleUtils.printError("User or Role not found.");
             }
         });
 
         parser.registerCommand("assignment-search", "Search assignments by filter", (scanner, system) -> {
-            System.out.println("\n1. By User\n2. By Role\n3. By Type (permanent/temporary)\n4. By Status (active/inactive)\n5. After Date\n6. Expiring before Date");
-            System.out.print("Select filter number: ");
-            String choice = scanner.nextLine().trim();
+            // Заменяем ручной выбор на promptChoice
+            List<String> filterOptions = Arrays.asList(
+                    "By User",
+                    "By Role",
+                    "By Type (permanent/temporary)",
+                    "By Status (active/inactive)",
+                    "After Date",
+                    "Expiring before Date"
+            );
 
-            var filter = switch(choice) {
-                case "1" -> {
-                    System.out.print("Enter username: ");
-                    yield AssignmentFilters.byUsername(scanner.nextLine().trim());
+            String choice = ConsoleUtils.promptChoice(scanner, "Select filter:", filterOptions);
+
+            var filter = switch (filterOptions.indexOf(choice)) {
+                case 0 -> {
+                    String username = ConsoleUtils.promptString(scanner, "Enter username: ", true);
+                    yield AssignmentFilters.byUsername(username);
                 }
-                case "2" -> {
-                    System.out.print("Enter role name: ");
-                    yield AssignmentFilters.byRoleName(scanner.nextLine().trim());
+                case 1 -> {
+                    String roleName = ConsoleUtils.promptString(scanner, "Enter role name: ", true);
+                    yield AssignmentFilters.byRoleName(roleName);
                 }
-                case "3" -> {
-                    System.out.print("Enter type (PERMANENT/TEMPORARY): ");
-                    yield AssignmentFilters.byType(scanner.nextLine().trim().toUpperCase());
+                case 2 -> {
+                    String type = ConsoleUtils.promptString(scanner, "Enter type (PERMANENT/TEMPORARY): ", true);
+                    yield AssignmentFilters.byType(type.toUpperCase());
                 }
-                case "4" -> {
-                    System.out.print("Enter status (active/inactive): ");
-                    String status = scanner.nextLine().trim().toLowerCase();
-                    if (status.equals("inactive")) yield AssignmentFilters.inactiveOnly();
-                    yield AssignmentFilters.activeOnly(); // По умолчанию активные
-                }
-                case "5" -> {
-                    System.out.print("Enter start date (yyyy-MM-dd HH:mm): ");
-                    yield AssignmentFilters.assignedAfter(scanner.nextLine().trim());
-                }
-                case "6" -> {
-                    System.out.print("Enter end date (yyyy-MM-dd HH:mm): ");
-                    yield AssignmentFilters.expiringBefore(scanner.nextLine().trim());
-                }
-                default -> {
-                    System.out.println("Invalid choice. Showing active assignments.");
+                case 3 -> {
+                    String status = ConsoleUtils.promptString(scanner, "Enter status (active/inactive): ", true);
+                    if (status.equalsIgnoreCase("inactive")) yield AssignmentFilters.inactiveOnly();
                     yield AssignmentFilters.activeOnly();
                 }
+                case 4 -> {
+                    String date = ConsoleUtils.promptString(scanner, "Enter start date (yyyy-MM-dd HH:mm): ", true);
+                    yield AssignmentFilters.assignedAfter(date);
+                }
+                case 5 -> {
+                    String date = ConsoleUtils.promptString(scanner, "Enter end date (yyyy-MM-dd HH:mm): ", true);
+                    yield AssignmentFilters.expiringBefore(date);
+                }
+                default -> AssignmentFilters.activeOnly();
             };
 
             printAssignmentTable(system.getAssignmentManager().findByFilter(filter));
@@ -557,8 +592,9 @@ public class CommandRegistry {
     // PERMISSION COMMANDS
     private static void registerPermissionCommands(CommandParser parser) {
         parser.registerCommand("permissions-user", "User permissions by resource", (scanner, system) -> {
-            System.out.print("Username: ");
-            String username = scanner.nextLine().trim();
+            // Заменяем прямой ввод на ConsoleUtils
+            String username = ConsoleUtils.promptString(scanner, "Username: ", true);
+
             system.getUserManager().findByUsername(username).ifPresentOrElse(user -> {
                 var perms = system.getAssignmentManager().getUserPermissions(user);
                 perms.stream().collect(Collectors.groupingBy(Permission::resource))
@@ -566,17 +602,16 @@ public class CommandRegistry {
                             System.out.println("Resource: " + res);
                             pList.forEach(p -> System.out.println("  - " + p.name() + " (" + p.description() + ")"));
                         });
-            }, () -> System.out.println("User not found."));
+            }, () -> ConsoleUtils.printError("User not found."));
         });
 
         parser.registerCommand("permissions-check", "Check specific permission", (scanner, system) -> {
-            System.out.print("Username: ");
-            String username = scanner.nextLine().trim();
+            // Заменяем прямые вызовы scanner на ConsoleUtils
+            String username = ConsoleUtils.promptString(scanner, "Username: ", true);
+
             system.getUserManager().findByUsername(username).ifPresentOrElse(user -> {
-                System.out.print("Permission name (READ): ");
-                String pName = scanner.nextLine().trim();
-                System.out.print("Resource (users): ");
-                String res = scanner.nextLine().trim();
+                String pName = ConsoleUtils.promptString(scanner, "Permission name (READ): ", true);
+                String res = ConsoleUtils.promptString(scanner, "Resource (users): ", true);
 
                 boolean has = system.getAssignmentManager().userHasPermission(user, pName, res);
                 System.out.println("Result: " + (has ? "GRANTED" : "DENIED"));
@@ -587,7 +622,7 @@ public class CommandRegistry {
                             .stream().filter(a -> a.isActive() && a.role().hasPermission(pName, res))
                             .forEach(a -> System.out.println(" - " + a.role().getName()));
                 }
-            }, () -> System.out.println("User not found."));
+            }, () -> ConsoleUtils.printError("User not found."));
         });
     }
 
@@ -596,40 +631,48 @@ public class CommandRegistry {
         parser.registerCommand("stats", "System statistics", (scanner, system) -> System.out.println(system.generateStatistics()));
         parser.registerCommand("clear", "Clear screen", (scanner, system) -> system.clearScreen());
         parser.registerCommand("exit", "Exit program", (scanner, system) -> {
-            System.out.print("Confirm exit? (yes/no): ");
-            if (scanner.nextLine().trim().equalsIgnoreCase("yes")) System.exit(0);
+            // Заменяем прямой ввод на ConsoleUtils
+            if (ConsoleUtils.promptYesNo(scanner, "Confirm exit")) {
+                System.exit(0);
+            }
         });
-        parser.registerCommand("audit-log", "Show ausit log", (scanner, system) -> system.getAuditLog().printLog());
+        parser.registerCommand("audit-log", "Show audit log", (scanner, system) -> system.getAuditLog().printLog());
     }
 
     // HELPERS
     private static List<User> searchUsersLogic(Scanner scanner, UserManager um) {
-        System.out.println("1. Username (contains)\n2. Email (contains)\n3. Email Domain\n4. Full Name (contains)");
-        String choice = scanner.nextLine().trim();
-        System.out.print("Enter search string: ");
-        String query = scanner.nextLine().trim();
-        return switch (choice) {
-            case "1" -> um.findByFilter(UserFilters.byUsernameContains(query));
-            case "2" -> um.findByFilter(UserFilters.byEmail(query));
-            case "3" -> um.findByFilter(UserFilters.byEmailDomain(query));
-            case "4" -> um.findByFilter(UserFilters.byFullNameContains(query));
+        // Заменяем ручной выбор на promptChoice
+        List<String> searchOptions = Arrays.asList(
+                "Username (contains)",
+                "Email (contains)",
+                "Email Domain",
+                "Full Name (contains)"
+        );
+
+        String choice = ConsoleUtils.promptChoice(scanner, "Select search type:", searchOptions);
+        String query = ConsoleUtils.promptString(scanner, "Enter search string: ", true);
+
+        return switch (searchOptions.indexOf(choice)) {
+            case 0 -> um.findByFilter(UserFilters.byUsernameContains(query));
+            case 1 -> um.findByFilter(UserFilters.byEmail(query));
+            case 2 -> um.findByFilter(UserFilters.byEmailDomain(query));
+            case 3 -> um.findByFilter(UserFilters.byFullNameContains(query));
             default -> um.findAll();
         };
     }
 
     private static void addPermissionsLoop(Scanner scanner, Role role) {
-        while (true) {
-            System.out.print("Add permission to this role? (yes/no): ");
-            if (!scanner.nextLine().trim().equalsIgnoreCase("yes")) break;
+        // Заменяем прямой ввод на ConsoleUtils
+        while (ConsoleUtils.promptYesNo(scanner, "Add permission to this role?")) {
             try {
-                System.out.print("Permission name: ");
-                String pName = scanner.nextLine().trim();
-                System.out.print("Resource: ");
-                String res = scanner.nextLine().trim();
-                System.out.print("Description: ");
-                String pDesc = scanner.nextLine().trim();
+                String pName = ConsoleUtils.promptString(scanner, "Permission name: ", true);
+                String res = ConsoleUtils.promptString(scanner, "Resource: ", true);
+                String pDesc = ConsoleUtils.promptString(scanner, "Description: ", true);
                 role.addPermission(new Permission(pName, res, pDesc));
-            } catch (Exception e) { System.out.println("Error: " + e.getMessage()); }
+                ConsoleUtils.printSuccess("Permission added.");
+            } catch (Exception e) {
+                ConsoleUtils.printError(e.getMessage());
+            }
         }
     }
 
